--- a/home page.html
+++ b/home page.html
@@ -283,7 +283,7 @@
             </div>
         </div>
        
-            <div class="grid gap-12 items-center md:grid-cols-3">
+            <div class="grid gap-12 items-center md:grid-cols-3 py-5">
                 <div class="space-y-4 text-center">
                     <img class="w-64 h-64 mx-auto object-cover rounded-xl md:w-40 md:h-40 lg:w-64 lg:h-64 transform transition-transform duration-500 ease-in-out hover:scale-110" 
                         src="https://tailus.io/sources/blocks/classic/preview/images/woman1.jpg" alt="woman" loading="lazy" width="640" height="805">
