home pge complete

--- a/club.html
+++ b/club.html
@@ -29,6 +29,9 @@
 </style>
 
 <body>
+    <div class="bg-white">
+
+    </div>
     <!-- navbar  -->
 
     <!-- body  -->
@@ -103,7 +106,7 @@
         </div>
     </div>
     <!-- footer  -->
-    <footer class="relative bg-black text-blueGray-100 pt-8 pb-6">
+    <footer class="relative bg-black  pt-8 pb-6">
         <div class="container mx-auto px-4">
             <div class="flex flex-wrap text-left lg:text-left">
                 <div class="w-full lg:w-6/12 px-4">
